@@ -1,14 +1,12 @@
 package com.alsjava.challenge.memegenerator.ui;
 
 import com.alsjava.challenge.memegenerator.utils.Languages;
-import com.github.juchar.colorpicker.ColorPickerField;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.combobox.ComboBox;
 import com.vaadin.flow.component.formlayout.FormLayout;
 import com.vaadin.flow.component.grid.Grid;
 import com.vaadin.flow.component.icon.VaadinIcon;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
-import com.vaadin.flow.component.page.Push;
 import com.vaadin.flow.component.splitlayout.SplitLayout;
 import com.vaadin.flow.component.textfield.NumberField;
 import com.vaadin.flow.component.textfield.TextField;
@@ -16,24 +14,23 @@ import com.vaadin.flow.data.provider.DataProvider;
 import com.vaadin.flow.data.provider.ListDataProvider;
 import com.vaadin.flow.data.value.ValueChangeMode;
 import com.vaadin.flow.router.Route;
-import com.vaadin.flow.server.PWA;
+import org.vaadin.addons.tatu.ColorPicker;
 
 import java.awt.*;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
 import java.nio.file.Files;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
  * Created by aluis on 12/10/19.
  */
-@SuppressWarnings("unused")
-@Push
 @Route("")
-@PWA(name = "Meme Generator Vaadin", shortName = "Meme Generator")
 public class MainLayout extends VerticalLayout {
 
     private final List<String> FONTS = List.of("Arial", "Helvetica", "Gill Sans", "Lucida", "Helvetica Narrow", "sans-serif", "Times", "Times New Roman", "Palatino", "Bookman", "New Century Schoolbook", "serif", "Andale Mono", "Courier New", "Courier", "Lucidatypewriter", "Fixed", "monospace", "Comic Sans", "Comic Sans MS", "Zapf Chancery", "Coronetscript", "Florence", "Parkavenue", "cursive", "Impact", "Arnoldboecklin", "Oldtown", "Blippo", "Brushstroke", "fantasy");
@@ -89,11 +86,12 @@ public class MainLayout extends VerticalLayout {
         tfUploadMemeURL.addValueChangeListener(event -> {
             try {
                 File file = Files.createTempFile("meme", "internet").toFile();
-                URL url = new URL(event.getValue());
+                URL url = URI.create(event.getValue()).toURL();
                 url.toURI(); // Valid is a good URL
                 ReadableByteChannel readableByteChannel = Channels.newChannel(url.openStream());
-                FileOutputStream fileOutputStream = new FileOutputStream(file);
-                fileOutputStream.getChannel().transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
+                try (FileOutputStream fileOutputStream = new FileOutputStream(file)) {
+                    fileOutputStream.getChannel().transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
+                }
                 memeGenerator.setSrc(file);
             } catch (Exception ignored) {
                 tfUploadMemeURL.setErrorMessage(Languages.get().i18n("error.not.a.url"));
@@ -116,14 +114,27 @@ public class MainLayout extends VerticalLayout {
         Button btnGenerate = new Button(Languages.get().i18n("action.generate"));
         btnGenerate.addClickListener(event -> memeGenerator.generateMeme());
 
-        ColorPickerField cpTextColor = new ColorPickerField(Languages.get().i18n("action.font.color"));
-        cpTextColor.addValueChangeListener(event -> memeGenerator.setTextColor("#" + Integer.toHexString(event.getValue().getRGB() & 0xffffff)));
-        cpTextColor.setValue(Color.RED);
+        ColorPicker cpTextColor = new ColorPicker();
+        cpTextColor.setNoClear(false);
+        List<Color> colorList = List.of(
+                Color.WHITE, Color.LIGHT_GRAY, Color.GRAY, Color.DARK_GRAY, Color.BLACK, Color.RED, Color.PINK,
+                Color.ORANGE, Color.YELLOW, Color.GREEN, Color.MAGENTA, Color.CYAN, Color.BLUE
+        );
+        List<ColorPicker.ColorPreset> colors = new ArrayList<>();
+        for (Color color : colorList) {
+            String hexValue = String.format("#%06x", 0xFFFFFF & color.getRGB());
+            String colorName = "[r=" + color.getRed() + ",g=" + color.getGreen() + ",b=" + color.getBlue() + "]";
+            colors.add(new ColorPicker.ColorPreset(hexValue, colorName, ColorPicker.CaptionMode.HTML));
+        }
+        cpTextColor.setPresets(colors);
+        cpTextColor.setLabel(Languages.get().i18n("action.font.color"));
+        cpTextColor.addValueChangeListener(event -> memeGenerator.setTextColor(event.getValue()));
+        cpTextColor.setValue(colors.getFirst().getColor());
 
         ComboBox<String> cbFontFamily = new ComboBox<>(Languages.get().i18n("action.font.family"));
         cbFontFamily.setItems(FONTS);
         cbFontFamily.addValueChangeListener(event -> memeGenerator.setFontFamily(event.getValue()));
-        cbFontFamily.setValue(FONTS.get(0));
+        cbFontFamily.setValue(FONTS.getFirst());
 
         TextField tfFontSize = new TextField(Languages.get().i18n("action.font.size"));
         tfFontSize.setValueChangeMode(ValueChangeMode.EAGER);
